LB-1994 completed security question views

--- a/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecretAnswerView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecretAnswerView.xib
@@ -12,34 +12,31 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SecretAnswerView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="385" height="86"/>
+            <rect key="frame" x="0.0" y="0.0" width="385" height="99"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1Bq-d4-d5l">
-                    <rect key="frame" x="0.0" y="0.0" width="385" height="86"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1Bq-d4-d5l">
+                    <rect key="frame" x="0.0" y="0.0" width="385" height="99"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Yz-Pz-6b7">
+                            <rect key="frame" x="0.0" y="0.0" width="385" height="43"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sCG-Jg-bQZ">
-                            <rect key="frame" x="0.0" y="0.0" width="385" height="86"/>
+                            <rect key="frame" x="0.0" y="43" width="385" height="56"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Yz-Pz-6b7">
-                                    <rect key="frame" x="0.0" y="6" width="385" height="9"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xib-Sx-I5y">
-                                    <rect key="frame" x="0.0" y="30" width="385" height="56"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="56" id="xu6-ix-a0h"/>
-                                    </constraints>
-                                </view>
                                 <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5VA-aN-3P4" customClass="QuickDismissPlaceholderTextField" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="12" y="31" width="361" height="54"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="385" height="56"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="56" id="Vvf-S0-Ant"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="87Q-wW-Ayl">
-                                    <rect key="frame" x="12" y="21" width="41.5" height="20"/>
+                                    <rect key="frame" x="12" y="-10" width="41.5" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="Vvs-ld-Is7"/>
                                     </constraints>
@@ -50,19 +47,12 @@
                             </subviews>
                             <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
-                                <constraint firstItem="Xib-Sx-I5y" firstAttribute="leading" secondItem="sCG-Jg-bQZ" secondAttribute="leading" id="58Q-Ob-gcP"/>
-                                <constraint firstItem="5VA-aN-3P4" firstAttribute="top" secondItem="Xib-Sx-I5y" secondAttribute="top" constant="1" id="7Rt-KF-Jr3"/>
-                                <constraint firstItem="2Yz-Pz-6b7" firstAttribute="top" secondItem="sCG-Jg-bQZ" secondAttribute="top" constant="6" id="Eu5-Qf-mBX"/>
                                 <constraint firstItem="87Q-wW-Ayl" firstAttribute="centerY" secondItem="5VA-aN-3P4" secondAttribute="top" id="Hnb-XU-Y1b"/>
-                                <constraint firstItem="2Yz-Pz-6b7" firstAttribute="leading" secondItem="sCG-Jg-bQZ" secondAttribute="leading" id="Yao-nf-DBj"/>
-                                <constraint firstAttribute="trailing" secondItem="5VA-aN-3P4" secondAttribute="trailing" constant="12" id="aPl-Ek-2QV"/>
-                                <constraint firstItem="Xib-Sx-I5y" firstAttribute="bottom" secondItem="5VA-aN-3P4" secondAttribute="bottom" constant="1" id="cNI-yg-RWy"/>
-                                <constraint firstItem="87Q-wW-Ayl" firstAttribute="top" secondItem="2Yz-Pz-6b7" secondAttribute="bottom" constant="6" id="f87-kS-Mgb"/>
-                                <constraint firstAttribute="trailing" secondItem="2Yz-Pz-6b7" secondAttribute="trailing" id="fgL-JY-IYu"/>
-                                <constraint firstItem="5VA-aN-3P4" firstAttribute="leading" secondItem="sCG-Jg-bQZ" secondAttribute="leading" constant="12" id="o64-cD-wB0"/>
-                                <constraint firstAttribute="bottom" secondItem="Xib-Sx-I5y" secondAttribute="bottom" id="rWZ-v8-6bJ"/>
+                                <constraint firstAttribute="bottom" secondItem="5VA-aN-3P4" secondAttribute="bottom" id="LDk-r4-Yh0"/>
+                                <constraint firstItem="5VA-aN-3P4" firstAttribute="top" secondItem="sCG-Jg-bQZ" secondAttribute="top" id="MWA-fF-RDV"/>
+                                <constraint firstAttribute="trailing" secondItem="5VA-aN-3P4" secondAttribute="trailing" id="aPl-Ek-2QV"/>
+                                <constraint firstItem="5VA-aN-3P4" firstAttribute="leading" secondItem="sCG-Jg-bQZ" secondAttribute="leading" id="o64-cD-wB0"/>
                                 <constraint firstItem="87Q-wW-Ayl" firstAttribute="leading" secondItem="sCG-Jg-bQZ" secondAttribute="leading" constant="12" id="tJu-Qr-iqx"/>
-                                <constraint firstAttribute="trailing" secondItem="Xib-Sx-I5y" secondAttribute="trailing" id="ypI-Xc-Gbu"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -80,10 +70,9 @@
             <connections>
                 <outlet property="answerTextField" destination="5VA-aN-3P4" id="ouv-eJ-kTG"/>
                 <outlet property="errorLabel" destination="2Yz-Pz-6b7" id="37i-Au-ahd"/>
-                <outlet property="lineView" destination="Xib-Sx-I5y" id="ihV-Za-ejo"/>
                 <outlet property="titleLabel" destination="87Q-wW-Ayl" id="bGz-Wd-5hO"/>
             </connections>
-            <point key="canvasLocation" x="146.40000000000001" y="-121.4392803598201"/>
+            <point key="canvasLocation" x="146.40000000000001" y="-115.59220389805098"/>
         </view>
     </objects>
     <resources>
