--- a/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecurityQuestionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecurityQuestionView.xib
@@ -18,7 +18,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ztt-64-C6D">
                     <rect key="frame" x="0.0" y="12" width="407" height="70"/>
                 </view>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qdU-BT-m3J">
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qdU-BT-m3J">
                     <rect key="frame" x="1" y="0.0" width="405" height="81"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKd-rI-Rfk">
